Fix htaccess for local devlopment

--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,7 @@
     </IfModule>
     
     RewriteEngine On
+    RewriteBase /
     
     RewriteCond %{REQUEST_FILENAME} -d [OR]
     RewriteCond %{REQUEST_FILENAME} -f
