--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+        "vue-router": "^2.3.0"
     },
     "dependencies": {
         "apexcharts": "^3.8.2",
