--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7",
-        "vue-router": "^2.3.0"
+        "vue-router": "^2.3.0",
+        "vuex": "3.1.2"
     },
     "dependencies": {
         "apexcharts": "^3.8.2",
