--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
         "lodash": "^4.17.4",
         "vue": "^2.5.7",
         "vue-router": "^2.3.0",
-        "vuex": "3.1.2"
+        "vuex": "3.1.2",
+        "vuex-persistedstate": "2.7.0"
     },
     "dependencies": {
         "apexcharts": "^3.8.2",
