--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
     "/css/app.css": "/css/app.css",
-    "/0.64f2c728002dd915f9b1.hot-update.js": "/0.64f2c728002dd915f9b1.hot-update.js"
+    "/css/template.css": "/css/template.css"
 }
